--- a/xacolatl-grids.html
+++ b/xacolatl-grids.html
@@ -16,43 +16,77 @@
 
     <header class="masthead">
     <nav>
-      <ul>
+      <ul class= "item">
         <li><a href="">Home</a></li>
         <li><a href="">About Us</a></li>
-        <li><a href="">Contact US</a></li>
+        <li><a href="">Contact Us</a></li>
       </ul>
     </nav>
 
     </header><!-- .masthead -->
 
-    <div class="page-title">
+    <div class="title">
     <h1>RAW XACOLATL</h1>
 
-    </div><!-- .page-title -->
-
-    <main class="main-content">
-
-      <div id="almond"></div>
-      <div id="almond-butter"></div>
-      <div id="fifty"></div>
-      <div id="aztec"></div>
-      <div id="cacao"></div>
-      <div id="cho"></div>
-      <div id="cinnamon"></div>
-      <div id="coffe"></div>
-      <div id="ginger"></div>
-      <div id="nibs"></div>
-      <div id="pecons"></div>
-      <div id="tea"></div>
-      <div id="truffles"></div>
-    </main><!-- #content .main-content -->
-
-    <aside class="sidebar">
+    </div><!-- .title -->
 
 
-    </aside><!-- .sidebar -->
+    <main class="main">
+  <article class="sale-item one">
+    <h1>Almond</h1>
+    <p>$2</p>
+    <img src="images/almond.jpg" alt="almond cacao snack">
+    <button>BUY NOW</button>
+  </article>
 
-    <footer class="footer-content">
+  <article class="sale-item two">
+    <h1>Almond-Butter</h1>
+    <p>$5</p>
+    <img src="images/almond_butter.jpg"
+         alt="almond-butter cacao snack.">
+    <button>BUY NOW</button>
+  </article>
+
+  <article class="sale-item three">
+    <h1>Aztec-Gold</h1>
+    <p>$2</p>
+    <img src="images/aztec_gold.jpg"
+         alt="aztec-gold cacao snack">
+    <button>BUY NOW</button>
+  </article>
+
+  <article class="sale-item four">
+    <h1>Cinnammon</h1>
+    <p>$2</p>
+    <img src="images/cinnamon.jpg"
+         alt="cinnamon cacao snack">
+    <button>BUY NOW</button>
+  </article>
+
+  <article class="sale-item five">
+    <h1>Coffe</h1>
+    <p>$2</p>
+    <img src="images/coffe.jpg"
+         alt="coffe cacao snack.">
+    <button>BUY NOW</button>
+  </article>
+
+  <article class="sale-item five">
+    <h1>nibs</h1>
+    <p>$6</p>
+    <img src="images/nibs.jpg"
+         alt="nibs">
+    <button>BUY NOW</button>
+  </article>
+
+
+
+</main> <!--main-->
+
+
+
+    <footer class="footer">
+      <h1>stuff here</h1>
 
 
 
